# pixrs

./: Cargo.toml  LICENSE  README.md
examples/: illust_info.rs
src/: de.rs  error.rs  futures.rs  lib.rs  types.rs
tests/: deserialize.rs
tests/json/: illust_info_100412238.json
