[package]
name = "pixrs"
version = "0.1.0"
edition = "2021"
description = "Pixiv AJAX API in Rust"
repository = "https://github.com/ShadowRZ/pixrs"
license = "MIT"
keywords = ["pixiv"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-aux = { version = "4", default-features = false }
serde_repr = "0.1"
serde_json = "1"
thiserror = "1"
regex = "1"
futures-util = "0.3"
async-stream = "0.3"
time = { version = "0.3", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "json"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = "0.12"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]