[package]
name = "pixrs"
version = "0.2.0"
edition = "2021"
description = "Pixiv AJAX API in Rust"
repository = "https://github.com/ShadowRZ/pixrs"
license = "MIT"
keywords = ["pixiv"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_repr = "0.1"
thiserror = "2"
regex = "1"
futures-util = "0.3"
async-stream = "0.3"
time = { version = "0.3", features = ["parsing", "formatting", "serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "json"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = "0.12"
serde_json = "1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]